--- a/cf_stock_bat100_final/views/stock_lot_views.xml
+++ b/cf_stock_bat100_final/views/stock_lot_views.xml
@@ -23,15 +23,16 @@
         </field>
     </record>
 
-    <!-- Vista de búsqueda (filtro BAT100) -->
+    <!-- Nueva vista de búsqueda (sin herencia) -->
     <record id="view_stock_lot_search_bat100" model="ir.ui.view">
         <field name="name">stock.lot.search.bat100</field>
         <field name="model">stock.lot</field>
-        <field name="inherit_id" ref="stock.view_production_lot_search"/>
         <field name="arch" type="xml">
-            <xpath expr="//filter[@name='serial']" position="after">
+            <search string="Buscar Números de Serie">
+                <field name="name"/>
+                <field name="product_id"/>
                 <filter name="bat100_true" string="BAT100" domain="[('bat100','=',True)]"/>
-            </xpath>
+            </search>
         </field>
     </record>
 </odoo>
