--- a/cf_stock_bat100_final/views/stock_move_line_views.xml
+++ b/cf_stock_bat100_final/views/stock_move_line_views.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <!-- Añadir campo BAT100 en el árbol de líneas de movimiento -->
+    <!-- Vista árbol de líneas de movimiento (añadimos BAT100 editable) -->
     <record id="view_move_line_tree_bat100" model="ir.ui.view">
         <field name="name">stock.move.line.tree.bat100</field>
         <field name="model">stock.move.line</field>
@@ -11,15 +11,17 @@
         </field>
     </record>
 
-    <!-- Añadir campo BAT100 en el formulario de línea de movimiento -->
+    <!-- Nueva vista formulario de línea de movimiento -->
     <record id="view_stock_move_line_form_bat100" model="ir.ui.view">
         <field name="name">stock.move.line.form.bat100</field>
         <field name="model">stock.move.line</field>
-        <field name="inherit_id" ref="stock.view_stock_move_line_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='lot_id']" position="after">
-                <field name="bat100"/>
-            </xpath>
+            <form string="Línea de movimiento">
+                <group>
+                    <field name="lot_id"/>
+                    <field name="bat100" widget="boolean_toggle"/>
+                </group>
+            </form>
         </field>
     </record>
 </odoo>
