--- a/cf_stock_bat100_final/views/stock_move_line_views.xml
+++ b/cf_stock_bat100_final/views/stock_move_line_views.xml
@@ -18,6 +18,8 @@
         <field name="arch" type="xml">
             <form string="Línea de movimiento">
                 <group>
+                    <!-- Campo necesario para dominios internos -->
+                    <field name="company_id" invisible="1"/>
                     <field name="lot_id"/>
                     <field name="bat100" widget="boolean_toggle"/>
                 </group>
