--- a/cf_battery_button_v4_8/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_8/views/stock_lot_views.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <!-- FORMULARIO -->
-    <record id="view_stock_lot_form_inherit_bat100_v7_0" model="ir.ui.view">
-        <field name="name">stock.lot.form.inherit.bat100.v7.0</field>
+    <record id="view_stock_lot_form_inherit_bat100_final" model="ir.ui.view">
+        <field name="name">stock.lot.form.inherit.bat100.final</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
@@ -18,8 +18,8 @@
     </record>
 
     <!-- LISTA -->
-    <record id="view_stock_lot_tree_inherit_bat100_v7_0" model="ir.ui.view">
-        <field name="name">stock.lot.tree.inherit.bat100.v7.0</field>
+    <record id="view_stock_lot_tree_inherit_bat100_final" model="ir.ui.view">
+        <field name="name">stock.lot.tree.inherit.bat100.final</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_tree"/>
         <field name="arch" type="xml">
@@ -30,36 +30,38 @@
     </record>
 
     <!-- KANBAN -->
-    <record id="view_stock_lot_kanban_inherit_bat100_v7_0" model="ir.ui.view">
-        <field name="name">stock.lot.kanban.inherit.bat100.v7_0</field>
+    <record id="view_stock_lot_kanban_inherit_bat100_final" model="ir.ui.view">
+        <field name="name">stock.lot.kanban.inherit.bat100.final</field>
         <field name="model">stock.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_kanban"/>
         <field name="arch" type="xml">
 
-            <!-- Cargar campo -->
+            <!-- Aseguramos que el campo esté disponible -->
             <xpath expr="//kanban" position="inside">
                 <field name="x_bat100"/>
             </xpath>
 
-            <!-- Icono verde arriba a la derecha -->
+            <!-- Mostrar el icono solo si el campo está activo -->
             <xpath expr="//div[contains(@class,'oe_kanban_details')]" position="inside">
-                <div style="
-                    position:absolute;
-                    top:4px;
-                    right:8px;
-                    background-color:#00b050;
-                    color:white;
-                    border-radius:50%;
-                    width:22px;
-                    height:22px;
-                    display:flex;
-                    align-items:center;
-                    justify-content:center;
-                    font-size:12px;
-                    box-shadow:0 0 3px rgba(0,0,0,0.2);
-                "
-                     t-att-title="'Batería 100%'">🔋
-                </div>
+                <t t-if="record.data.x_bat100 or record.x_bat100.value or record.x_bat100.raw_value">
+                    <div style="
+                        position:absolute;
+                        top:4px;
+                        right:8px;
+                        background-color:#00b050;
+                        color:white;
+                        border-radius:50%;
+                        width:22px;
+                        height:22px;
+                        display:flex;
+                        align-items:center;
+                        justify-content:center;
+                        font-size:12px;
+                        box-shadow:0 0 3px rgba(0,0,0,0.2);
+                    "
+                         t-att-title="'Batería 100%'">🔋
+                    </div>
+                </t>
             </xpath>
         </field>
     </record>
