--- a/cf_battery_button_v4_8/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_8/views/stock_lot_views.xml
@@ -10,7 +10,7 @@
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
 
-            <!-- Insertamos debajo del campo product_id (siempre existe) -->
+            <!-- Insertamos debajo del campo product_id -->
             <xpath expr="//field[@name='product_id']" position="after">
                 <field name="x_bat100"/>
             </xpath>
@@ -24,7 +24,7 @@
     <record id="view_stock_lot_tree_bat100" model="ir.ui.view">
         <field name="name">stock.lot.tree.bat100</field>
         <field name="model">stock.lot</field>
-        <field name="inherit_id" ref="stock.view_lot_tree"/>
+        <field name="inherit_id" ref="stock.view_production_lot_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//tree" position="inside">
                 <field name="x_bat100"/>
