--- a/cf_battery_button_v4_8/views/stock_lot_views.xml
+++ b/cf_battery_button_v4_8/views/stock_lot_views.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <!-- Vista formulario de lotes -->
+
+    <!--  Vista formulario de lotes  -->
     <record id="view_stock_lot_form_inherit_bat100_v5_4" model="ir.ui.view">
         <field name="name">stock.lot.form.inherit.bat100.v5.4</field>
         <field name="model">stock.lot</field>
@@ -18,7 +18,8 @@
         </field>
     </record>
 
-    <!-- Vista árbol de lotes -->
+
+    <!--  Vista árbol de lotes  -->
     <record id="view_stock_lot_tree_inherit_bat100_v5_4" model="ir.ui.view">
         <field name="name">stock.lot.tree.inherit.bat100.v5.4</field>
         <field name="model">stock.lot</field>
@@ -30,7 +31,8 @@
         </field>
     </record>
 
-    <!-- Popup de movimientos de stock -->
+
+    <!--  Popup de movimientos de stock  -->
     <record id="view_move_line_lot_form_inherit_bat100_v5_4" model="ir.ui.view">
         <field name="name">stock.move.line.form.inherit.bat100.v5.4</field>
         <field name="model">stock.move.line</field>
@@ -41,4 +43,22 @@
             </xpath>
         </field>
     </record>
+
+
+    <!--  Vista Kanban de Números de Serie/Lotes (añade indicador de Batería 100%)  -->
+    <record id="view_stock_lot_kanban_inherit_bat100_v5_4" model="ir.ui.view">
+        <field name="name">stock.lot.kanban.inherit.bat100.v5.4</field>
+        <field name="model">stock.lot</field>
+        <field name="inherit_id" ref="stock.view_production_lot_kanban"/>
+        <field name="arch" type="xml">
+            <xpath expr="//div[contains(@class, 'o_kanban_record_body')]" position="inside">
+                <t t-if="record.x_bat100.raw_value">
+                    <div style="display:flex;align-items:center;gap:4px;margin-top:4px;">
+                        <span style="color:#00C853;font-weight:600;">🔋 Batería 100%</span>
+                    </div>
+                </t>
+            </xpath>
+        </field>
+    </record>
+
 </odoo>
